[package]
name = "bevy10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.1" }
avian2d = "0.1"
bevy_spritesheet_animation = "0.2"
bevy_light_2d = "0.3"
bevy-inspector-egui = "0.25"
pid = "4.0"